# device-use

./: .claudeignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODOS.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  security.yml
demos/: 01_quickstart.py  02_identify.py  03_batch.py  04_dnmr.py  05_blind_challenge.py  06_ai_scientist.py  07_gui_live.py  08_pipeline.py  09_compare.py  10_multi_instrument.py  11_reaction_monitor.py  12_lab_report.py  13_streaming.py  14_library.py  15_showcase.py  16_benchmark.py  17_ai_scientist_loop.py  20_e2e_closed_loop.py  21_showcase_demo.py  22_vm_demo.py  23_offline_stream_demo.py  24_vnc_demo.py  25_vnc_cu_demo.py  README.md  benchmark.py  demo_full_experiment.py  lab_report_demo.py  multi_instrument_demo.py  quickstart.py  record_full_showcase.py  run_web.sh  showcase.py  streaming_demo.py  test_cua_basic.py  topspin_ai_scientist.py  topspin_batch.py  topspin_blind_challenge.py  topspin_compare.py  topspin_dnmr.py  topspin_identify.py  (+3 more)
demos/lib/: __init__.py  recorder.py  runner.py  terminal.py
docs/: demo-feasibility-matrix.md  demo-technical-design.md  feasibility-analysis.md  lab-inventory.md  local-gap-analysis.md  progress.md  research-report.md  simulation-instruments-research.md  tech-stack-decision.md  topspin-ai-scientist-design.md  wow-demo-strategy.md
docs/plans/: 2026-03-16-expansion-review.md
docs/research/: CUA_RESEARCH_CONSOLIDATED.md  LOCAL_COMPUTER_USE_MODELS_GUIDE.md
examples/: demo_basic.py  demo_labclaw.py
src/device_use/: __init__.py  __main__.py  cli.py  orchestrator.py
src/device_use/actions/: __init__.py  executor.py  models.py  registry.py  scaling.py
src/device_use/backends/: __init__.py  base.py  claude.py  openai_compat.py
src/device_use/core/: __init__.py  agent.py  history.py  models.py  observer.py  prompts.py  result.py  window_manager.py
src/device_use/instruments/: __init__.py  base.py  template.py
src/device_use/instruments/nmr/: __init__.py  adapter.py  brain.py  demo_cache.py  gui_automation.py  library.py  processor.py  visualizer.py
src/device_use/instruments/plate_reader/: __init__.py  adapter.py  brain.py  models.py  visualizer.py
src/device_use/integrations/: __init__.py  labclaw.py  mcp_server.py
src/device_use/knowledge/: __init__.py  converter.py  retriever.py
src/device_use/operators/: __init__.py  a11y.py  base.py
src/device_use/profiles/: __init__.py  loader.py
src/device_use/profiles/builtin/image-analysis/: imagej-fiji.yaml
src/device_use/profiles/builtin/plate-readers/: biotek-gen5.yaml
src/device_use/remote/: agent_server.py  fix_session.sh  restart_agent_interactive.ps1
src/device_use/safety/: __init__.py  guard.py  layers.py  models.py
src/device_use/skills/: __init__.py  context.py
src/device_use/tools/: __init__.py  base.py  pubchem.py  tooluniverse.py
src/device_use/web/: __init__.py  app.py
tests/: conftest.py  test_actions.py  test_agent.py  test_ai_scientist_loop.py  test_backends.py  test_claude_backend.py  test_cli.py  test_converter_coverage.py  test_coverage_100_device_use.py  test_coverage_gaps.py  test_coverage_remaining.py  test_demo_lib.py  test_e2e.py  test_edge_cases.py  test_executor.py  test_integration.py  test_knowledge.py  test_labclaw.py  test_mcp_server.py  test_models.py  test_nmr.py  test_nmr_coverage.py  test_observer.py  test_openai_compat.py  test_operators.py  test_orchestrator.py  test_plate_reader.py  test_pubchem_mocked.py  test_record_full_showcase.py  test_safety.py  test_skills_context.py  test_spectral_library.py  test_template_instrument.py  test_tools.py  test_web.py
